--- a/src/Css/about.css
+++ b/src/Css/about.css
@@ -62,7 +62,7 @@ li + li {
 .info {
   width: 100%;
   height: min-content;
-  color: violet;
+  color: violet !important;
   font-weight: 500;
   margin-bottom: 0.19em;
 }
@@ -110,10 +110,12 @@ li + li {
 }
 .header {
   font-size: 2rem;
+  z-index: 3;
   margin: 12px;
   color: white;
-  background-color: dimgray;
+  background-color: #0b0303;
   padding: 2px;
   border-radius: 12px;
   text-align: -webkit-center;
+  box-shadow: 0 20px 50px violet;
 }
