--- a/src/Css/portfolio.css
+++ b/src/Css/portfolio.css
@@ -59,9 +59,11 @@
   justify-content: center;
   /* margin-left: 26px; */
   /* margin-right: 2px; */
+  margin-top: 43px;
 }
 .card {
   margin-right: 23px !important;
+  background-color: #181616;
 }
 .cdiv {
   width: 100%;
@@ -73,6 +75,37 @@
 }
 #BgPortpg {
   height: 150vh !important;
+}
+.card-body {
+  color: violet;
+  height: 15em;
+  overflow: scroll;
+  background-color: #181616;
+}
+
+.list-group {
+  width: fit-content;
+}
+.list-group-flush .list-group-item:first-child {
+  border-top-width: 0;
+  color: violet;
+  background-color: #181616;
+}
+.list-group-item {
+  position: relative;
+  display: block;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: -1px;
+  background-color: #181616 !important;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+.snip1584 h5 {
+  font-weight: normal;
+  background-color: pink;
+  color: black !important;
+  padding: 3px 10px;
+  transform: translateY(-100%);
+  transition-delay: 0s;
 }
 .slick-slide.slick-active.slick-current {
 }
