--- a/src/Css/about.css
+++ b/src/Css/about.css
@@ -118,3 +118,12 @@ li + li {
   text-align: -webkit-center;
   box-shadow: 0 20px 50px violet;
 }
+@media only screen and (max-width: 570px) {
+  #aboutBg {
+    height: 215vh !important;
+  }
+  #mRow {
+    margin-left: 8px !important;
+    margin-right: 0px !important;
+  }
+}
