--- a/src/Css/about.css
+++ b/src/Css/about.css
@@ -119,11 +119,15 @@ li + li {
   box-shadow: 0 20px 50px violet;
 }
 @media only screen and (max-width: 570px) {
-  #aboutBg {
-    height: 215vh !important;
+  .responsiveRow1 {
+    margin-left: 14px !important;
+    margin-top: 26px !important;
+  }
+  .responsiveBg1 {
+    height: 250vh !important;
   }
   #mRow {
-    margin-left: 8px !important;
-    margin-right: 0px !important;
+    margin-left: 8px;
+    margin-right: 0px;
   }
 }
