--- a/src/Css/about.css
+++ b/src/Css/about.css
@@ -72,6 +72,9 @@ li + li {
   margin: 1em;
   border-radius: 20% !important;
 }
+#aboutBg {
+  height: 109vh !important;
+}
 .profile:hover {
   left: 29em;
   top: 5em;
